AP-21936: Add reference tables to table transform load context
and use them to reconstruct the SourceTableProperties